# Playwright-Tests

./: Bad login test with wrong creds.py  CSV Tests.py  Login test v2_test.py  README.md  api_test.py  cicd-test.yaml  loop control structure.py  pyproject.toml  report.html  saucedemo_login.py
.github/workflows/: cicd-test.yml
Pages/: inventory_page.py  login_page.py
Tests/: Bad login test with wrong creds_test.py  CSV_test.py  Login test v2_test.py  Login_ui_test.py  api_test.py  cart_loop_test.py  csv_login_test.py  login_data_driven.py  login_invalid_credentials_test.py  login_test.py  loop control structure_test.py  sauce_demo_e2e_test.py  saucedemo_login.py  test_Bad login test with wrong creds.py  test_CSV.py  test_Login test v2.py  test_loop_control.py  test_saucedemo_login.py  users.csv
pages/: inventory_page.py  login_page.py
