[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playwright-tests"  # Your package name
version = "0.1.0"
description = "Playwright test suite"
dependencies = [
    "playwright",
    "pytest",
    "pytest-playwright",
]

[tool.pytest.ini_options]
# testpaths = ["tests"]  # Adjust paths
# addopts = "--headed"   # Optional
testpaths = ["pages"]     # Per your comment
# exclude = ["Tests"]   # If needed