[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playwright-tests"
version = "0.1.0"
description = "Playwright test suite"
dependencies = [
    "playwright",
    "pytest",
    "pytest-playwright",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pages*"]  # Only package your pages/ module
exclude = ["Tests*"]  # Skip Tests/ dir

[tool.pytest.ini_options]
testpaths = ["Tests", "pages"]  # Or wherever your tests live

[tool.pytest.ini_options]
playwright_headless = true  # Headless browsers (CI default anyway)
addopts = "--headed=false"